# snake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/workflows/: codeql.yml  tests.yml
src/: CMakeLists.txt  dbg.h  point.c  point.h  snake.c  snake_obj.c  snake_obj.h
tests/: CMakeLists.txt  minunit.h  point_tests.c  runtests.sh  snake_obj_tests.c
